--- a/debian/rules
+++ b/debian/rules
@@ -7,6 +7,6 @@ endif
 %:
 	TEST_NO_NETWORK=$(TEST_NO_NETWORK) dh $@
 
-override_dh_auto_build:
+override_dh_auto_configure:
 	cd share && make
-	dh_auto_build
+	dh_auto_configure
