--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Build-Depends-Indep: perl, libmodule-install-perl, libnet-ldns-perl,
  libio-socket-inet6-perl, libmoose-perl, libmodule-find-perl, libjson-perl,
  libfile-sharedir-perl, libfile-slurp-perl, libnet-ip-perl,
  liblist-moreutils-perl, libmail-rfc822-address-perl, libhash-merge-perl,
- libreadonly-perl, libintl-perl, libtest-fatal-perl, libjson-perl, gettext
+ libreadonly-perl, libintl-perl, libtest-fatal-perl, libjson-xs-perl, gettext
 Maintainer: Jerry Lundström <lundstrom.jerry@gmail.com>
 Standards-Version: 3.9.1
 Homepage: https://github.com/jelu/zonemaster-engine
